<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.alexander.quizalexanderbermudezi007213.MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:background="@drawable/backgroundindex">

                <TextView
                    android:layout_width="109dp"
                    android:layout_height="30dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp"
                    android:text="@string/Financiar"
                    android:textSize="19sp"
                    android:textStyle="bold"
                    android:layout_centerVertical="true"
                    android:textColor="@android:color/white"
                    android:id="@+id/textView2" />

                <TextView
                    android:layout_width="160dp"
                    android:layout_height="50dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:text="@string/numero"
                    android:textColor="@android:color/white"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:id="@+id/textView" />

                <TextView
                    android:layout_width="130dp"
                    android:layout_height="30dp"
                    android:layout_alignLeft="@+id/textView2"
                    android:layout_alignParentBottom="true"
                    android:layout_alignStart="@+id/textView2"
                    android:layout_marginBottom="33dp"
                    android:text="@string/Fecha"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="203dp"
                    android:layout_height="110dp"
                    android:background="@color/colorGray">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="83dp"
                        android:layout_height="30dp"
                        android:layout_alignParentTop="true"
                        android:layout_marginEnd="9dp"
                        android:layout_marginRight="9dp"
                        android:layout_marginTop="17dp"
                        android:layout_toLeftOf="@+id/textView5"
                        android:layout_toStartOf="@+id/textView5"
                        android:text="@string/Ingresos"
                        android:textColor="@color/colorAzulLight"
                        android:textSize="19sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="60dp"
                        android:layout_height="30dp"
                        android:layout_alignBaseline="@+id/textView4"
                        android:layout_alignBottom="@+id/textView4"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginEnd="15dp"
                        android:layout_marginRight="15dp"
                        android:text="@string/Porcentaje"
                        android:textColor="@android:color/white"
                        android:textSize="19sp"
                        android:textStyle="bold"
                        android:background="@drawable/borde"
                        android:layout_centerVertical="true"
                        android:layout_centerHorizontal="true"/>

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="150dp"
                        android:layout_height="30dp"
                        android:layout_alignEnd="@+id/textView5"
                        android:layout_alignRight="@+id/textView5"
                        android:layout_below="@+id/textView4"
                        android:layout_marginTop="8dp"
                        android:text="@string/SaldoIngresos"
                        android:textColor="@color/colorPrimary"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="203dp"
                    android:layout_height="110dp"
                    android:background="@color/colorGray">

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="83dp"
                        android:layout_height="30dp"
                        android:layout_alignParentTop="true"
                        android:layout_marginEnd="14dp"
                        android:layout_marginRight="14dp"
                        android:layout_marginTop="16dp"
                        android:layout_toLeftOf="@+id/textView8"
                        android:layout_toStartOf="@+id/textView8"
                        android:text="@string/Gastos"
                        android:textColor="@color/colorAzulLight"
                        android:textSize="19sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="60dp"
                        android:layout_height="30dp"
                        android:layout_above="@+id/textView7"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginEnd="13dp"
                        android:layout_marginRight="13dp"
                        android:background="@drawable/borde2"
                        android:text="@string/Porcentaje2"
                        android:textColor="@android:color/white"
                        android:textSize="19sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="150dp"
                        android:layout_height="30dp"
                        android:layout_alignLeft="@+id/textView9"
                        android:layout_alignStart="@+id/textView9"
                        android:layout_below="@+id/textView9"
                        android:layout_marginTop="10dp"
                        android:text="@string/SaldoIngresos"
                        android:textColor="@color/colorOrange"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                </RelativeLayout>

            </LinearLayout>
            
        </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
